--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "matches": ["https://web.whatsapp.com/*"],
-      "js": ["fileViewer.js"],
+      "js": ["utils/csvTools.js", "fileViewer.js"],
       "run_at": "document_start",
       "world": "MAIN"
     }
