--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "WhatsApp Web File Viewer",
-  "version": "1.0",
-  "description": "View PDFs, CSVs directly in WhatsApp Web without downloading them.",
+  "version": "1.2.0",
+  "description": "View PDFs, CSVs, TXTs, JSONs directly in WhatsApp Web without downloading them.",
   "permissions": [],
   "host_permissions": ["https://web.whatsapp.com/*"],
   "content_scripts": [
